--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "FoodOrderingApp",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "3.5",
+    "tailwindcss": "^0.7.4"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
+  }
 }
